buildscript {
    ext {
        springBootVersion = '2.0.3.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}


// lombok configuration
plugins {
//    id 'org.springframework.boot' version '2.0.3.RELEASE'
//    id "io.spring.dependency-management" version "1.0.5.RELEASE"
//    id 'net.ltgt.apt' version '0.15'
//    id  'com.github.spotbugs' version '1.6.1'
}

//spotbugs {
//    toolVersion = '3.1.3'
//}

// To generate an HTML report instead of XML
//tasks.withType(com.github.spotbugs.SpotBugsTask) {
//    reports {
//        xml.enabled = false
//        html.enabled = true
//    }
//}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'maven'
//    apply plugin: 'war'

    repositories {
        mavenCentral()
    }

//    apply plugin: "pmd"
    group = 'com.workingbit'
}

def defaultEncoding = 'UTF-8'
[compileJava, compileTestJava]*.options*.encoding = defaultEncoding

subprojects { subproject ->
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    if (subproject.name.endsWith('service')) {
        subproject.apply plugin: 'application'
        subproject.apply plugin: 'war'
    }


    configurations {
//        runtime.exclude group: 'org.eclipse.jetty.websocket'
//        runtime.exclude group: 'org.eclipse.jetty', module: 'jetty-client'
//        runtime.exclude group: 'org.eclipse.jetty', module: 'jetty-webapp'
//        runtime.exclude group: 'org.eclipse.jetty', module: 'jetty-xml'
//        runtime.exclude group: 'org.eclipse.jetty', module: 'jetty-io'
    }

    test.onlyIf { Boolean.getBoolean('skip.tests') }

    task deploylocal(type: Copy) {
        from libsDir
        include '*.war'
        into "${tomcatHome}/webapps"
        rename { fileName ->
            fileName.replace("service-${version}", "")
        }
    }

    build.dependsOn deploylocal

    [compileJava, compileTestJava]*.options.collect { options ->
        options.compilerArgs.add '-Xlint:unchecked'
    }
}

configure(subprojects) {
    dependencies {
        compile 'org.apache.commons:commons-lang3:3.5'
        compile 'org.apache.commons:commons-collections4:4.1'

//        compile('com.sparkjava:spark-core:2.7.2')

//        compile 'com.github.spotbugs:spotbugs:3.1.3'
//        compileOnly 'net.jcip:jcip-annotations:1.0'
//        compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.3'

//        testCompile('org.springframework.boot:spring-boot-starter-test')
//        testCompile group: 'junit', name: 'junit', version: '4.+'

        // test spark controllers
//        testCompile "com.despegar:spark-test:1.1.6"

//        pmd 'net.sourceforge.pmd:pmd-java:6.4.0'
//        pmd 'org.ow2.asm:asm:6.2'
//        compile 'com.qulice:qulice-gradle-plugin:0.17.3'
    }
}

configure(subprojects.findAll { it.name.endsWith('service') }) { p ->
    dependencies {

//        compile('org.springframework.boot:spring-boot-starter-web')
//        providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
//        testCompile('org.springframework.boot:spring-boot-starter-test')

        compile 'io.reactivex:rxjava:1.2.2'

        // https://mvnrepository.com/artifact/org.springframework.security/spring-security-acl
//        compile group: 'org.springframework.security', name: 'spring-security-acl'

//        compile group: 'com.amazonaws.serverless', name: 'aws-serverless-java-container-spark', version: '1.1'

        compile project(':sharedmodule')
    }
}

project(':securityservice') {
    bootRun {
        mainClassName = 'com.workingbit.security.SecurityApplication'
        version = '1.0'
    }

    dependencies {
        compile project(':orchestratemodule')
    }
}

project(':articleservice') {
//    springBoot {
//        mainClassName = 'com.workingbit.article.ArticleApplication'
//        version = '1.0'
//    }

    bootRun {
        mainClassName = 'com.workingbit.article.ArticleApplication'
        version = '1.0'
    }

    dependencies {
//        compile 'org.ehcache:ehcache:3.5.2'
        compile project(':orchestratemodule')

    }
}

project(':boardservice') {
    bootRun {
        mainClassName = 'com.workingbit.board.BoardApplication'
        version = '1.0'
    }

    dependencies {

//        compile 'org.ehcache:ehcache:3.5.2'

        compile project(':orchestratemodule')

        compile files('lib/grammatica-1.6.jar')
    }
}

project(':orchestratemodule') {
    jar {
        baseName = 'orchestratemodule'
        version = "1.0"
        enabled = true
    }

    bootJar {
        enabled = false
    }

    dependencies {
        // https://mvnrepository.com/artifact/org.redisson/redisson
        compile group: 'org.redisson', name: 'redisson', version: '3.6.5'

        compile project(':sharedmodule')
    }
}

project(':sharedmodule') {
    jar {
        baseName = 'sharedmdoule'
        version = "1.0"
        enabled = true
    }

    bootJar {
        enabled = false
    }

    dependencies {
        compile 'commons-codec:commons-codec:1.9'
        compile group: 'commons-io', name: 'commons-io', version: '2.6'

        compile 'com.amazonaws:aws-java-sdk-dynamodb:1.11.150'

        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
        compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb-reactive
        compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive'
//        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'

        compile 'com.fasterxml.jackson.core:jackson-core:2.9.5'
        compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
        compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.5'
        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.5'
        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.5'
        compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.5'

        // https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
        compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.9.Final'

        // https://mvnrepository.com/artifact/org.glassfish/javax.el
        compile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'

        // tree
        compile 'com.github.rutledgepaulv:prune:1.3'

        compile 'com.intellij:annotations:+@jar'

        compileOnly('org.projectlombok:lombok:1.16.22')
//        compileOnly files('lib/lombok-edge.jar')
//        annotationProcessor files('lib/lombok-edge.jar')

        compile 'uk.com.robust-it:cloning:1.9.10'

        compile 'com.mashape.unirest:unirest-java:1.4.9'

        compile 'org.cfg4j:cfg4j-core:4.4.1'

        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
        compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'

        compile group: 'org.simplejavamail', name: 'simple-java-mail', version: '5.0.3'

//        compile 'com.qulice:qulice-pmd:0.17.3'
    }
}

sourceCompatibility = 1.10
targetCompatibility = 1.10

//repositories {
//    mavenCentral()
//}

//task writePom << {
//    pom {
//        project {
//            inceptionYear '2014'
//            licenses {
//                license {
//                    name 'The Apache Software License, Version 2.0'
//                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
//                    distribution 'repo'
//                }
//            }
//        }
//    }.writeTo("$projectDir/pom.xml")
//}

//spotbugs {
//    ignoreFailures = true
//    toolVersion = "3.1.3"
//    sourceSets = [sourceSets.main]
//    reportsDir = file("$project.buildDir/reports/spotbugs")
//    effort = "max"
//}

//pmd {
//    ignoreFailures = true
//    sourceSets = [sourceSets.main]
//    reportsDir = file("$project.buildDir/reports/pmd")
//    ruleSets = [
//            "basic",
//            "braces"
//    ]
//}
// add CPD to check
//check << {
//    File outDir = new File('build/reports/pmd/')
//    outDir.mkdirs()
//    ant.taskdef(name: 'cpd', classname: 'net.sourceforge.pmd.cpd.CPDTask',
//            classpath: configurations.pmd.asPath)
//    ant.cpd(minimumTokenCount: '100', format: 'xml',
//            outputFile: new File(outDir , 'cpd.xml')) {
//        def dir = new File("src/main/java")
//        if (dir.exists()) {
//            fileset(dir: "src/main/java") {
//                include(name: '**/*.java')
//            }
//        } else {
//            fileset(dir: "sharedmodule/src/main/java")
//        }
//    }
//}

task wrapper(type: Wrapper) {
    gradleVersion = '4.8'
}

